# lab2_1

./: CMakeLists.txt  Shared_ptr.h  Weak_ptr.h  main.cpp
Google_tests/: tests.cpp
sequence/: LinkedList.h  LinkedListSequence.h  Sequence.h
smrt_ptr/: Control_Block.h  Shared_ptr.h  Unique_ptr.h  Weak_ptr.h
